fix(client): learn layout does not stretch to the bottom

--- a/client/src/components/layouts/learn.css
+++ b/client/src/components/layouts/learn.css
@@ -1,5 +1,5 @@
 #learn-app-wrapper .desktop-layout {
-  height: calc(100vh - var(--header-height) - 42px);
+  height: calc(100vh - var(--header-height));
 }
 
 #learn-app-wrapper .reflex-container.vertical .reflex-splitter:hover {
